--- a/ModeloAspNetMvc/Web.config
+++ b/ModeloAspNetMvc/Web.config
@@ -8,7 +8,10 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />    
+    <add key="Endereco_WebService_Caixa" value="http://localhost:16815/" />
+    <add key="Endereco_WebService_Estoque" value="http://localhost:2689/" />
+    <add key="Endereco_WebService_Global" value="http://localhost:2802/" />    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -41,7 +44,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
