--- a/ModeloAspNetMvc/packages.config
+++ b/ModeloAspNetMvc/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="BootstrapNotifications" version="0.3.2" targetFramework="net461" />
+  <package id="EPPlus" version="4.1.1" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -24,5 +26,8 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.0.12" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
