--- a/ModeloAspNetMvc/ModeloAspNetMvc.csproj
+++ b/ModeloAspNetMvc/ModeloAspNetMvc.csproj
@@ -199,6 +199,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProdutoController.cs" />
     <Compile Include="Controllers\TesteController.cs" />
+    <Compile Include="Controllers\VendaApiController.cs" />
+    <Compile Include="Controllers\VendaController.cs" />
     <Compile Include="Extensions\NotificationExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -208,6 +210,7 @@
     <Compile Include="Models\Caixa\MovimentoCaixaModel.cs" />
     <Compile Include="Models\Caixa\TelaFechamentoDiarioModel.cs" />
     <Compile Include="Models\Produto\RelatorioProdutoViewModel.cs" />
+    <Compile Include="Models\Venda\ResumoFinanceiroMensalModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -432,6 +435,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Venda\BalancoMensal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AppLogs\" />
