add resumo mensal e caixa com busca servidor local

--- a/ModeloAspNetMvc/Web.config
+++ b/ModeloAspNetMvc/Web.config
@@ -14,9 +14,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Endereco_WebService_Caixa" value="http://localhost:16815/" />
-    <add key="Endereco_WebService_Estoque" value="http://localhost:2689/" />
-    <add key="Endereco_WebService_Global" value="http://localhost:2802/" />
+    <add key="Endereco_WebService_Caixa" value="http://localhost/ComFacil.FrenteCaixa.Caixa.Service/" />
+    <add key="Endereco_WebService_Estoque" value="http://localhost/ComFacil.FrenteCaixa.Estoque.Service/" />
+    <add key="Endereco_WebService_Global" value="http://localhost/ComFacil.FrenteCaixa.Global.Service/" />
+    <add key="Endereco_WebService_Venda" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/" />
   </appSettings>
   <system.web>
     <globalization culture="pt-BR" uiCulture="pt-BR" />
@@ -27,7 +28,7 @@
     </httpModules>
   </system.web>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="DATABASE=ComFacilDb;WSID=DESKTOP-VN71804\SQLEXPRESS2014;SERVER=DESKTOP-VN71804\SQLEXPRESS2014;uid=sa;pwd=murer;Pooling=false;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="DATABASE=ComFacilDb;WSID=ROBSON-PC\SQLEXPRESS;SERVER=ROBSON-PC\SQLEXPRESS;uid=sa;pwd=123456;Pooling=false;" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="DATABASE=comfacildb;WSID=den1.mssql3.gear.host;SERVER=den1.mssql3.gear.host;uid=comfacildb;pwd=Pf3RxP9_0HX_;Pooling=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
