--- a/ModeloAspNetMvc/ModeloAspNetMvc.csproj
+++ b/ModeloAspNetMvc/ModeloAspNetMvc.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Models\Caixa\MovimentoCaixaModel.cs" />
     <Compile Include="Models\Caixa\TelaFechamentoDiarioModel.cs" />
     <Compile Include="Models\Produto\RelatorioProdutoViewModel.cs" />
+    <Compile Include="Models\Venda\ResumoDebitosAReceberModel.cs" />
     <Compile Include="Models\Venda\ResumoFinanceiroMensalModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -258,7 +259,17 @@
     <Content Include="Content\img\logo-2.png" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\Proxima_Nova_Bold.svg" />
+    <Content Include="fonts\Proxima_Nova_Bold_Italic.svg" />
+    <Content Include="fonts\Proxima_Nova_Light.svg" />
+    <Content Include="fonts\Proxima_Nova_Light_Italic.svg" />
+    <Content Include="fonts\Proxima_Nova_Regular.svg" />
+    <Content Include="fonts\Proxima_Nova_Regular_Italic.svg" />
+    <Content Include="fonts\Proxima_Nova_Semibold.svg" />
+    <Content Include="fonts\Proxima_Nova_Semibold_Italic.svg" />
+    <Content Include="fonts\startui.svg" />
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -316,6 +327,48 @@
     <Content Include="Content\bootstrap-datepicker3.css.map" />
     <Content Include="Content\bootstrap-datepicker.standalone.css.map" />
     <Content Include="Content\bootstrap-datepicker.css.map" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\fre3of9x.ttf" />
+    <Content Include="fonts\free3of9.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\Proxima_Nova_Bold.eot" />
+    <Content Include="fonts\Proxima_Nova_Bold.ttf" />
+    <Content Include="fonts\Proxima_Nova_Bold.woff" />
+    <Content Include="fonts\Proxima_Nova_Bold.woff2" />
+    <Content Include="fonts\Proxima_Nova_Bold_Italic.eot" />
+    <Content Include="fonts\Proxima_Nova_Bold_Italic.ttf" />
+    <Content Include="fonts\Proxima_Nova_Bold_Italic.woff" />
+    <Content Include="fonts\Proxima_Nova_Bold_Italic.woff2" />
+    <Content Include="fonts\Proxima_Nova_Light.eot" />
+    <Content Include="fonts\Proxima_Nova_Light.ttf" />
+    <Content Include="fonts\Proxima_Nova_Light.woff" />
+    <Content Include="fonts\Proxima_Nova_Light.woff2" />
+    <Content Include="fonts\Proxima_Nova_Light_Italic.eot" />
+    <Content Include="fonts\Proxima_Nova_Light_Italic.ttf" />
+    <Content Include="fonts\Proxima_Nova_Light_Italic.woff" />
+    <Content Include="fonts\Proxima_Nova_Light_Italic.woff2" />
+    <Content Include="fonts\Proxima_Nova_Regular.eot" />
+    <Content Include="fonts\Proxima_Nova_Regular.ttf" />
+    <Content Include="fonts\Proxima_Nova_Regular.woff" />
+    <Content Include="fonts\Proxima_Nova_Regular.woff2" />
+    <Content Include="fonts\Proxima_Nova_Regular_Italic.eot" />
+    <Content Include="fonts\Proxima_Nova_Regular_Italic.ttf" />
+    <Content Include="fonts\Proxima_Nova_Regular_Italic.woff" />
+    <Content Include="fonts\Proxima_Nova_Regular_Italic.woff2" />
+    <Content Include="fonts\Proxima_Nova_Semibold.eot" />
+    <Content Include="fonts\Proxima_Nova_Semibold.ttf" />
+    <Content Include="fonts\Proxima_Nova_Semibold.woff" />
+    <Content Include="fonts\Proxima_Nova_Semibold.woff2" />
+    <Content Include="fonts\Proxima_Nova_Semibold_Italic.eot" />
+    <Content Include="fonts\Proxima_Nova_Semibold_Italic.ttf" />
+    <Content Include="fonts\Proxima_Nova_Semibold_Italic.woff" />
+    <Content Include="fonts\Proxima_Nova_Semibold_Italic.woff2" />
+    <Content Include="fonts\startui.eot" />
+    <Content Include="fonts\startui.ttf" />
+    <Content Include="fonts\startui.woff" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
@@ -436,6 +489,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Venda\BalancoMensal.cshtml" />
+    <Content Include="Views\Venda\DebitosAReceber.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AppLogs\" />
