--- a/Project.Layer.App/Project.Layer.App.csproj
+++ b/Project.Layer.App/Project.Layer.App.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AppModels\Caixa\FechamentoDiarioAppModel.cs" />
     <Compile Include="AppModels\Caixa\MovimentoCaixaAppModel.cs" />
     <Compile Include="AppModels\RespostaAppViewModel.cs" />
+    <Compile Include="AppModels\Venda\ResumoDebitosAReceberAppModel.cs" />
     <Compile Include="AppModels\Venda\ResumoFinanceiroMensalAppModel.cs" />
     <Compile Include="AppServices\CaixaAppService.cs" />
     <Compile Include="AppServices\ClienteAppService.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="AutoMapper\AppMappingProfile.cs" />
     <Compile Include="Helper\HttpServiceHelper.cs" />
     <Compile Include="HttpServices\HttpServiceGlobal.cs" />
+    <Compile Include="HttpServices\HttpServiceVenda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AppModels\Cliente\ClienteAppModel.cs" />
     <Compile Include="AppModels\Cliente\RelatorioClienteAppModel.cs" />
@@ -86,6 +88,10 @@
     <Folder Include="AppModels\Produto\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Project.CrossCutting.Exceptions\Project.CrossCutting.Exceptions.csproj">
+      <Project>{206BCA49-C307-40C1-85D7-8F3C28F4321A}</Project>
+      <Name>Project.CrossCutting.Exceptions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Project.Layer.Domain\Project.Layer.Domain.csproj">
       <Project>{D3138729-4848-424B-B3C7-1CD8DF9DD2EC}</Project>
       <Name>Project.Layer.Domain</Name>
