--- a/ModeloAspNetMvc/packages.config
+++ b/ModeloAspNetMvc/packages.config
@@ -34,6 +34,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Moment.js" version="2.9.0" targetFramework="net461" />
+  <package id="MySql.Data" version="6.10.8" targetFramework="net461" />
+  <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
