--- a/Project.Layer.Data/App.config
+++ b/Project.Layer.Data/App.config
@@ -5,13 +5,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=localhost;port=5432;Database=ModeloAppMvc;User Id=postgres;Password=abc123;" providerName="Npgsql" />
+    <!--<add name="DefaultConnection" connectionString="Server=localhost;port=5432;Database=ModeloAppMvc;User Id=postgres;Password=abc123;" providerName="Npgsql" />!-->
+    <add name="DefaultConnection" connectionString="server=localhost;user id=root;password=mudar1234@;database=comfacil" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </providers>
   </entityFramework>
   <runtime>
