--- a/Project.Layer.Data/packages.config
+++ b/Project.Layer.Data/packages.config
@@ -3,5 +3,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
+  <package id="MySql.Data" version="6.10.8" targetFramework="net461" />
+  <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net461" />
   <package id="Npgsql" version="3.1.0" targetFramework="net461" />
 </packages>
