--- a/ModeloAspNetMvc/Web.config
+++ b/ModeloAspNetMvc/Web.config
@@ -29,7 +29,8 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="DATABASE=ComFacilDb;WSID=DESKTOP-VN71804\SQLEXPRESS2014;SERVER=DESKTOP-VN71804\SQLEXPRESS2014;uid=sa;pwd=murer;Pooling=false;" providerName="System.Data.SqlClient" />-->
     <!--<add name="DefaultConnection" connectionString="DATABASE=comfacildb;WSID=den1.mssql3.gear.host;SERVER=den1.mssql3.gear.host;uid=comfacildb;pwd=Pf3RxP9_0HX_;Pooling=false;" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="server=localhost;user id=root;password=mudar1234@;database=comfacil" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="DefaultConnection" connectionString="server=localhost;user id=root;password=mudar1234@;database=comfacil" providerName="MySql.Data.MySqlClient" />-->
+    <add name="DefaultConnection" connectionString="server=mysql642.umbler.com; port=41890;user id=comfacil;password=praca50rua7;database=comfacilpaineldb" providerName="MySql.Data.MySqlClient" />
 
   </connectionStrings>
   <runtime>
