--- a/ModeloAspNetMvc/Web.config
+++ b/ModeloAspNetMvc/Web.config
@@ -19,6 +19,7 @@
     <add key="Endereco_WebService_Global" value="http://localhost/ComFacil.FrenteCaixa.Global.Service/" />
     <add key="Endereco_WebService_Venda" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/" />
     <add key="URI_CAIXA" value="http://localhost/ModeloAspNetMvc/api/caixaapi/" />
+    <add key="URI_VENDA" value="http://localhost/ModeloAspNetMvc/api/vendaApi/" />
   </appSettings>
   <system.web>
     <globalization culture="pt-BR" uiCulture="pt-BR" />
