--- a/Project.Layer.Data/Project.Layer.Data.csproj
+++ b/Project.Layer.Data/Project.Layer.Data.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Repositories\CaixaRepository.cs" />
     <Compile Include="Repositories\ClienteRepository.cs" />
     <Compile Include="Repositories\RepositorioBase.cs" />
+    <Compile Include="Repositories\ResumoDebitosAReceberRepository.cs" />
     <Compile Include="Repositories\ResumoFinanceiroMensalRepository.cs" />
   </ItemGroup>
   <ItemGroup>
