--- a/ModeloAspNetMvc/Web.config
+++ b/ModeloAspNetMvc/Web.config
@@ -18,8 +18,15 @@
     <add key="Endereco_WebService_Estoque" value="http://localhost/ComFacil.FrenteCaixa.Estoque.Service/" />
     <add key="Endereco_WebService_Global" value="http://localhost/ComFacil.FrenteCaixa.Global.Service/" />
     <add key="Endereco_WebService_Venda" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/" />
-    <add key="URI_CAIXA" value="http://localhost/ModeloAspNetMvc/api/caixaapi/" />
-    <add key="URI_VENDA" value="http://localhost/ModeloAspNetMvc/api/vendaApi/" />
+    
+    <!--urls para servicos criado no projeto painel-->
+    <!--<add key="URI_CAIXA" value="http://localhost/ModeloAspNetMvc/api/caixaapi/" />
+    <add key="URI_VENDA" value="http://localhost/ModeloAspNetMvc/api/vendaApi/" />-->
+  
+    <!--urls para servicos do comfacilrentedecaixa-->
+    <add key="URI_CAIXA" value="http://localhost/ComFacil.FrenteCaixa.Caixa.Service/api/caixa/" />
+    <add key="URI_VENDA" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/api/LevantamentoFinanceiro/" />
+    
   </appSettings>
   <system.web>
     <globalization culture="pt-BR" uiCulture="pt-BR" />
