- update configuracao servico

--- a/ModeloAspNetMvc/Web.config
+++ b/ModeloAspNetMvc/Web.config
@@ -20,12 +20,12 @@
     <add key="Endereco_WebService_Venda" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/" />
     
     <!--urls para servicos criado no projeto painel-->
-    <add key="URI_CAIXA" value="https://painelcomfacil.azurewebsites.net/api/caixaapi/" />
-    <add key="URI_VENDA" value="https://painelcomfacil.azurewebsites.net/api/vendaApi/" />
+    <add key="URI_CAIXA" value="http://painelcomfacil-com.umbler.net/api/caixaApi/" />
+    <add key="URI_VENDA" value="http://painelcomfacil-com.umbler.net/api/vendaApi/" />
   
     <!--urls para servicos do comfacilrentedecaixa-->
-    <!--<add key="URI_CAIXA" value="http://localhost/ComFacil.FrenteCaixa.Caixa.Service/api/caixa/" />
-    <add key="URI_VENDA" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/api/LevantamentoFinanceiro/" />-->
+    <!--<add key="URI_CAIXA" value="http://localhost/PainelComFacil/api/caixaApi/" />
+    <add key="URI_VENDA" value="http://localhost/PainelComFacil/api/vendaApi/" />-->
     
   </appSettings>
   <system.web>
