--- a/ModeloAspNetMvc/Web.config
+++ b/ModeloAspNetMvc/Web.config
@@ -20,15 +20,13 @@
     <add key="Endereco_WebService_Venda" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/" />
     
     <!--urls para servicos criado no projeto painel-->
-    <add key="URI_CAIXA" value="http://painelcomfacil-com.umbler.net/api/caixaapi/" />
-    <add key="URI_VENDA" value="http://painelcomfacil-com.umbler.net/api/vendaApi/" />
+    <!--<add key="URI_CAIXA" value="http://painelcomfacil-com.umbler.net/api/caixaapi/" />
+    <add key="URI_VENDA" value="http://painelcomfacil-com.umbler.net/api/vendaApi/" />-->
 
-    <!--<add key="URI_CAIXA" value="http://localhost/ModeloAspNetMVC/api/caixaapi/" />
-    <add key="URI_VENDA" value="http://localhost/ModeloAspnetMVC/api/vendaApi/" />-->
-  
     <!--urls para servicos do comfacilrentedecaixa-->
-    <!--<add key="URI_CAIXA" value="http://localhost/PainelComFacil/api/caixaApi/" />
-    <add key="URI_VENDA" value="http://localhost/PainelComFacil/api/vendaApi/" />-->
+    <add key="URI_CAIXA" value="http://localhost/ComFacil.FrenteCaixa.Caixa.Service/api/caixa/" />
+    <add key="URI_VENDA" value="http://localhost/ComFacil.FrenteCaixa.Venda.Service/api/LevantamentoFinanceiro/" />
+      
     
   </appSettings>
   <system.web>
