- add login - nova relatório de vendas por funcionário

--- a/ModeloAspNetMvc/ModeloAspNetMvc.csproj
+++ b/ModeloAspNetMvc/ModeloAspNetMvc.csproj
@@ -197,6 +197,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionFilters\BasicAuthenticationAttribute.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -209,6 +210,7 @@
     <Compile Include="Controllers\CaixaController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ProdutoController.cs" />
     <Compile Include="Controllers\TesteController.cs" />
     <Compile Include="Controllers\VendaApiController.cs" />
@@ -221,9 +223,11 @@
     <Compile Include="Models\Caixa\FechamentoDiarioModel.cs" />
     <Compile Include="Models\Caixa\MovimentoCaixaModel.cs" />
     <Compile Include="Models\Caixa\TelaFechamentoDiarioModel.cs" />
+    <Compile Include="Models\Login\LoginViewModel.cs" />
     <Compile Include="Models\Produto\RelatorioProdutoViewModel.cs" />
     <Compile Include="Models\Venda\ResumoDebitosAReceberModel.cs" />
     <Compile Include="Models\Venda\ResumoFinanceiroMensalModel.cs" />
+    <Compile Include="Models\Venda\VendaPorFuncionarioModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -502,6 +506,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Venda\BalancoMensal.cshtml" />
     <Content Include="Views\Venda\DebitosAReceber.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Venda\VendasPorFuncionario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AppLogs\" />
